@@ -7,92 +7,71 @@ import org.w3c.dom.Document;
 import org.w3c.dom.Element;
 import org.w3c.dom.Node;
 import org.w3c.dom.NodeList;
-import javax.xml.xpath.XPath;
-import javax.xml.xpath.XPathConstants;
-import javax.xml.xpath.XPathFactory;
-import javax.xml.xpath.XPathExpression;
-///////////////////////////////////////////////////////////////////////////////////////////////
-///No utiliza xpath expresion
+
 /**
  *
  * @author Alvaro
  */
 public class Enricher extends Tarea {
 
-    private String valor;
-    private String xpathExpression;
-
-    public Enricher(List<Slot> entradas, List<Slot> salidas, String xpath, String valor) {
+    public Enricher(List<Slot> entradas, List<Slot> salidas) {
         super(entradas, salidas);
-        this.valor = valor;
-        this.xpathExpression = xpath;
     }
 
     @Override
     public void ejecuta() {
-        Mensaje msg = entradas.getFirst().leerSlot();
-        System.out.println(msg);
-        Document cuerpoMensaje = msg.getCuerpo();
+        Document mensajeBase = entradas.get(0).leerSlot().getCuerpo();
+        Document mensajeEnriquecimiento = entradas.get(1).leerSlot().getCuerpo();
 
-        try {
-            XPathFactory xpathFactory = XPathFactory.newInstance();
-            XPath xpath = xpathFactory.newXPath();
+        fusionarNodos(mensajeBase.getDocumentElement(), mensajeEnriquecimiento.getDocumentElement());
 
-            XPathExpression expr = xpath.compile(xpathExpression);
-
-            Node targetNode = (Node) expr.evaluate(cuerpoMensaje, XPathConstants.NODE);
-
-            if (targetNode != null) {
-                targetNode.setTextContent(valor);
-            } else {
-                crearEstructuraXPath(cuerpoMensaje, xpathExpression, valor);
-            }
-
-        } catch (Exception e) {
-            System.err.println("Error al enriquecer el mensaje con XPath: " + e.getMessage());
-            e.printStackTrace();
-        }
-
-        Mensaje msgFinal = new Mensaje(cuerpoMensaje);
-        System.out.println(msgFinal);
-        salidas.getFirst().escribirSlot(msgFinal);
+        Mensaje mensajeSalida = new Mensaje(mensajeBase);
+        System.out.println(mensajeSalida);
+        salidas.getFirst().escribirSlot(mensajeSalida);
     }
 
-    /**
-     * Método auxiliar para crear la estructura XPath si no existe
-     */
-    private void crearEstructuraXPath(Document doc, String xpathExpression, String value) {
-        try {
-            String[] parts = xpathExpression.split("/");
-            Node currentNode = doc.getDocumentElement();
+    private void fusionarNodos(Element nodoBase, Element nodoEnriquecimiento) {
+        NodeList hijosEnriquecimiento = nodoEnriquecimiento.getChildNodes();
 
-            for (String part : parts) {
-                if (part.isEmpty() || part.equals(doc.getDocumentElement().getNodeName())) {
-                    continue; 
-                }
+        for (int i = 0; i < hijosEnriquecimiento.getLength(); i++) {
+            Node hijoEnriquecimiento = hijosEnriquecimiento.item(i);
 
-                NodeList children = currentNode.getChildNodes();
-                Node foundNode = null;
+            if (hijoEnriquecimiento.getNodeType() == Node.ELEMENT_NODE) {
+                Element elementoEnriquecimiento = (Element) hijoEnriquecimiento;
+                String nombreElemento = elementoEnriquecimiento.getTagName();
 
-                for (int i = 0; i < children.getLength(); i++) {
-                    if (children.item(i).getNodeName().equals(part)) {
-                        foundNode = children.item(i);
+                // Buscar si existe un elemento con el mismo nombre en el nodo base
+                NodeList hijosBase = nodoBase.getChildNodes();
+                boolean encontrado = false;
+
+                for (int j = 0; j < hijosBase.getLength(); j++) {
+                    Node hijoBase = hijosBase.item(j);
+                    if (hijoBase.getNodeType() == Node.ELEMENT_NODE
+                            && ((Element) hijoBase).getTagName().equals(nombreElemento)) {
+
+                        // Si ambos tienen hijos, fusionar recursivamente
+                        if (elementoEnriquecimiento.hasChildNodes() && hijoBase.hasChildNodes()) {
+                            fusionarNodos((Element) hijoBase, elementoEnriquecimiento);
+                        } else {
+                            // Si el elemento de enriquecimiento tiene contenido, reemplazar
+                            if (elementoEnriquecimiento.hasChildNodes()
+                                    || elementoEnriquecimiento.getTextContent() != null) {
+                                nodoBase.replaceChild(
+                                        nodoBase.getOwnerDocument().importNode(elementoEnriquecimiento, true),
+                                        hijoBase
+                                );
+                            }
+                        }
+                        encontrado = true;
                         break;
                     }
                 }
-
-                if (foundNode == null) {
-                    Element newElement = doc.createElement(part);
-                    currentNode.appendChild(newElement);
-                    currentNode = newElement;
-                } else {
-                    currentNode = foundNode;
+                // Si no se encontró el elemento en el base, agregarlo
+                if (!encontrado) {
+                    Node nodoImportado = nodoBase.getOwnerDocument().importNode(elementoEnriquecimiento, true);
+                    nodoBase.appendChild(nodoImportado);
                 }
             }
-            currentNode.setTextContent(value);
-
-        } catch (Exception e) {
-            System.err.println("Error al crear estructura XPath: " + e.getMessage());
         }
     }
 }
